<resources>
    <string name="app_name">Sume Launcher</string>

    <!-- Basic -->
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Deny</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="hint">Hint</string>

    <!-- Title -->
    <string name="settings">Settings</string>
    <string name="app_drawer">App drawer</string>
    <string name="select_app">Select App</string>

    <!-- Button -->
    <string name="quit">Quit</string>

    <!-- Menu -->
    <string name="remove">Remove</string>
    <string name="uninstall">Uninstall</string>
    <string name="app_info">App info</string>
    <string name="app_market">App market</string>
    <string name="add_page">Add page</string>
    <string name="delete_page">Delete page</string>
    <string name="modify_item">Add item</string>

    <!-- Content Description -->
    <string name="apps_icon">Apps icon</string>
    <string name="settings_icon">Settings icon</string>
    <string name="edit_icon">Edit icon</string>
    <string name="prev_page_icon">Previous page icon</string>
    <string name="next_page_icon">Next page icon</string>

    <!-- Hint -->
    <string name="cannot_find_package">Cannot find package.</string>
    <string name="cannot_find_activity">Cannot find activity.</string>
    <string name="cannot_access_unexported_activity">Cannot access unexported activity.</string>
    <string name="activity_requires_extra_permission">This activity requires extra permission to be started.</string>
    <string name="cannot_uninstall_app">Cannot uninstall this app.</string>
    <string name="uri_is_empty">Uri is empty.</string>
    <string name="no_matching_activity">No activity can open this link.</string>
    <string name="insist_uninstall_system_app">This is a system app, which is usually not recommended and not allowed to uninstall. \nHowever, in some 3rd-party Android systems, this kind of app is allowed to uninstall. \nIf you want to try to uninstall this app, press \"Uninstall\". This operation is not guaranteed to be successful.</string>
    <string name="insist_uninstall_this_app">"Before uninstalling Sume Launcher, please make sure that:\n1. You have other launcher application installed. Otherwise, your device will not work properly after uninstallation.\n2. You haven't activated or have deactivated device manager. Otherwise, uninstallation will not proceed normally due to the limitation of Android system. "</string>
    <string name="uninstall_app_failed">Failed to uninstall app.</string>

    <!-- Preference Headers -->
    <string name="header_layout">Layout</string>
    <string name="header_interaction">Interaction</string>
    <string name="header_system">System</string>
    <string name="header_privacy">Privacy</string>
    <string name="header_about">About</string>

    <!-- Preference Items -->
    <string name="grid_size">Grid size</string>
    <string name="display_status_bar">Display status bar</string>
    <string name="display_top_bar">Display top bar</string>
    <string name="top_bar_icon">Top bar icon</string>
    <string name="animation">Animation</string>
    <string name="scroll_switch_page">Scroll to switch page</string>
    <string name="volume_key_switch_page">Use volume key to switch page</string>
    <string name="volume_key_switch_page_summary">PageUp and PageDown key are also regarded as volume keys</string>
    <string name="default_app">Default app</string>
    <string name="deactivate_device_manager">Deactivate device manager</string>
    <string name="permission">Permission</string>
    <string name="ask_for_perm_fine_location">Ask for permission to access fine location</string>
    <string name="ask_for_perm_fine_location_summary">Allow this app to ask for permission to access fine location</string>
    <string name="version">Version</string>
    <string name="view_github_page">View GitHub page</string>
    <string name="github_address" translatable="false">https://github.com/HonQout/Sume_Launcher</string>
    <string name="date_and_time">Date and time</string>
    <string name="date">Date</string>
    <string name="audio">Audio</string>
    <string name="ringer_mode">Ringer mode</string>
    <string name="connectivity">Connectivity</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="battery">Battery</string>
    <string name="battery_percentage">Battery percentage</string>

    <!-- Control Center Items -->
    <string name="network">Network</string>
    <string name="sound">Sound</string>
    <string name="display">Display</string>
    <string name="launcher_settings">Launcher settings</string>
    <string name="lock_screen">Lock screen</string>

    <!-- Others -->
    <string name="battery_percentage_format" translatable="false">%d%%</string>
    <string name="page_text" translatable="false">%d/%d</string>
    <string name="request_permission">Request permission</string>
    <string name="perm_fine_location_reason">This application requires permission to access your fine location in order to display Wi-Fi signal level and Wi-Fi ssid.\nYour location information will not be recorded or saved.\nIf you deny this permission, information mentioned above will not be displayed due to limitation of Android API.\nYou can press \"App info\" to go to Application Info page in system settings and grant this permission.</string>
    <string name="require_following_permission">This application requires the following permission(s):</string>
    <string name="num_items">%d item(s)</string>
    <string name="search_for_apps">Search for apps</string>
    <string name="add_device_admin_reason">This app needs this permission to lock the screen.</string>
    <string name="device_not_support_this_function">Your device does not support this function.</string>
    <string name="delete_page_fail_reason">The last page cannot be deleted.</string>
    <string name="choose_an_activity">Choose an activity</string>
    <string name="insert_page_before">Insert page before</string>
    <string name="insert_page_after">Insert page after</string>

</resources>