<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_layout">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="display_status_bar"
            app:title="@string/display_status_bar" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="display_top_bar"
            app:title="@string/display_top_bar" />

        <Preference
            app:fragment="com.qch.sumelauncher.settings.ui.TopBarIconFragment"
            app:iconSpaceReserved="false"
            app:key="top_bar_icon"
            app:title="@string/top_bar_icon" />

        <ListPreference
            app:defaultValue="5,5"
            app:entries="@array/grid_size_entries"
            app:entryValues="@array/grid_size_values"
            app:iconSpaceReserved="false"
            app:key="grid_size"
            app:title="@string/grid_size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_interaction">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="animation"
            app:title="@string/animation" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="scroll_switch_page"
            app:title="@string/scroll_switch_page" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="volume_key_switch_page"
            app:summary="@string/volume_key_switch_page_summary"
            app:title="@string/volume_key_switch_page" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_privacy">

        <Preference
            app:fragment="com.qch.sumelauncher.settings.ui.PermissionFragment"
            app:iconSpaceReserved="false"
            app:key="permission"
            app:title="@string/permission" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="ask_for_perm_fine_location"
            app:summary="@string/ask_for_perm_fine_location_summary"
            app:title="@string/ask_for_perm_fine_location" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_system">

        <Preference
            app:iconSpaceReserved="false"
            app:key="default_app"
            app:title="@string/default_app" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_about">

        <Preference
            app:iconSpaceReserved="false"
            app:key="version"
            app:title="@string/version" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="view_github_page"
            app:summary="@string/github_address"
            app:title="@string/view_github_page" />

    </PreferenceCategory>

</PreferenceScreen>