<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/audio">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/baseline_bell_settings_24"
            app:iconSpaceReserved="true"
            app:key="ringer_mode"
            app:title="@string/ringer_mode" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/connectivity">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/baseline_airplanemode_settings_24"
            app:iconSpaceReserved="true"
            app:key="airplane_mode"
            app:title="@string/airplane_mode" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/baseline_wifi_settings_24"
            app:iconSpaceReserved="true"
            app:key="wlan"
            app:title="@string/wlan" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/baseline_bluetooth_settings_24"
            app:iconSpaceReserved="true"
            app:key="bluetooth"
            app:title="@string/bluetooth" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/battery">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/baseline_percent_settings_24"
            app:iconSpaceReserved="true"
            app:key="battery_percentage"
            app:title="@string/battery_percentage" />

    </PreferenceCategory>

</PreferenceScreen>